...
  Widget build(BuildContext context) {
    return DefaultTabController(
      length: 5,
      initialIndex: 0,
      child: Scaffold(
        key: const ValueKey('dashboard'),
        appBar: const ApplicationBar(title: 'Dashboard'),
        drawer: const NavDrawer(),
        body: _getBody(),
        bottomNavigationBar: ConvexAppBar.badge(
          const <int, dynamic>{},
          backgroundColor: const Color(0xFF19B0E7),
          color: Colors.white,
...
